added domain name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="msg"></div>
 <script type="text/javascript">
 SomApi.account = "SOM57479fc37701b"; //your API Key here
-SomApi.domainName = "capstonespeedtest.herokuapp"; //your domain or sub-domain here
+SomApi.domainName = "capstonespeedtest.herokuapp.com"; //your domain or sub-domain here
 SomApi.config.sustainTime = 4;
 SomApi.onTestCompleted = onTestCompleted;
 SomApi.onError = onError;
