--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	<meta name="viewport" content="user-scalable=no, width=device-width, maximum-scale=1.0">
-    <script src="//speedof.me/api/api.js" type="text/javascript"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Capstone SpeedTest for Consumer</title>
+    <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -59,22 +57,10 @@
 
     <div class="container">
 
-      <div class="starter-template" style="float:left; margin-right:30px">
-        <h3>--------------- Settings ---------------</h3><form>
-            Faster Test<input type="range" id="sustainTime" min="1" max="8" value="4"> More Accurate Test<br /><br />
-            <input type="checkbox" id="testServerEnabled" checked="checked">Find Test Server<br />
-            <input type="checkbox" id="userInfoEnabled" checked="checked">Find User Info<br />
-            <input type="checkbox" id="latencyTestEnabled" checked="checked">Do Latency Test<br />
-            <input type="checkbox" id="uploadTestEnabled" checked="checked">Do Upload Test<br />
-            <input type="checkbox" id="progress.enabled" checked="checked">Show Progress<br />
-            <input type="checkbox" id="progress.verbose" checked="checked">Verbose Progress<br />
-        </form>
-    </div>
-    <div class="lead" id="prgs" style="float:left; margin-right:30px"></div>
-    <div class="lead" id="msg" style="float:left;"></div>
-    <div class="lead" style="clear:both;"><br /><button style="width:150px" id="btnStart" type="button" onclick="btnStartClick()">Start Test</button><br /></div>
-
-        
+      <div class="starter-template">
+        <h1>Bootstrap starter template</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
 
     </div><!-- /.container -->
 
@@ -87,56 +73,5 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-	<script type="text/javascript">
-        SomApi.account = "SOM57479fc37701b";  // API Key here
-        SomApi.domainName = "capstonespeedtest.herokuapp.com";
-        SomApi.onTestCompleted = onTestCompleted;
-        SomApi.onError = onError;
-        SomApi.onProgress = onProgress;
-
-        var msgDiv = document.getElementById("msg");
-        var prgsDiv = document.getElementById("prgs");
-
-        function btnStartClick() {
-            //set config values
-			SomApi.config.sustainTime = document.getElementById("sustainTime").value;
-            SomApi.config.testServerEnabled = document.getElementById("testServerEnabled").checked;
-            SomApi.config.userInfoEnabled = document.getElementById("userInfoEnabled").checked;
-            SomApi.config.latencyTestEnabled = document.getElementById("latencyTestEnabled").checked;
-            SomApi.config.uploadTestEnabled = document.getElementById("uploadTestEnabled").checked;
-            SomApi.config.progress.enabled = document.getElementById("progress.enabled").checked;
-            SomApi.config.progress.verbose = document.getElementById("progress.verbose").checked;
-
-            msgDiv.innerHTML = "<h3>--------------- Test Result ---------------</h3><h4>" +
-                "Speed test in progress. Please wait...</h4>";
-            SomApi.startTest();
-        }
-
-        function onTestCompleted(testResult) {
-            msgDiv.innerHTML = "<h3>--------------- Test Result ---------------</h3><h4>" +
-                "Download: " + testResult.download + " Mbps <br/>" +
-                "Upload: " + testResult.upload + " Mbps <br/>" +
-                "Latency: " + testResult.latency + " ms <br/>" +
-                "Jitter: " + testResult.jitter + " ms <br/>" +
-                "Test Server: " + testResult.testServer + "<br/>" +
-                "IP: " + testResult.ip_address + "<br/>" +
-                "Hostname: " + testResult.hostname + "<br/>" +
-            "</h4>";
-        }
-
-        function onError(error) {
-            msgDiv.innerHTML = "Error " + error.code + ": " + error.message;
-        }
-
-        function onProgress(progress) {
-            prgsDiv.innerHTML =
-            "<h3>--------------- Progress ---------------</h3><h4>" +
-                "Progress Type: " + progress.type + "<br/>" +
-                "Pass: " + progress.pass + "<br/>" +
-                "Percent Done: " + progress.percentDone + "% <br/>" +
-                "Current Speed: " + progress.currentSpeed + " Mbps <br/>" +
-            "</h4>";
-        }
-    </script>
   </body>
 </html>
