--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Capstone SpeedTest for Consumer</title>
+    <title>Capstone SpeedTest for Certis Cisco</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Capstone SpeedTest for Certis Cisco</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -57,7 +57,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="position:relative">
 
       <div class="starter-template" style="float:left; margin-right:30px">
         <h3>--------------- Settings ---------------</h3><form>
