--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container" style="position:relative">
 
-      <div class="starter-template" style="float:left; margin-top:auto; margin-right:30px">
+      <div class="starter-template" style="float:left; margin-top:50px; margin-right:30px">
         <h3>--------------- Settings ---------------</h3><form>
             Faster Test<input type="range" id="sustainTime" min="1" max="8" value="4"> More Accurate Test<br /><br />
             <input type="checkbox" id="testServerEnabled" checked="checked">Find Test Server<br />
@@ -70,8 +70,8 @@
             <input type="checkbox" id="progress.verbose" checked="checked">Verbose Progress<br />
         </form>
     </div>
-    <div class="starter-template" id="prgs" style="float:left; margin-top:auto; margin-right:30px"></div>
-    <div class="starter-template" id="msg" style="float:left; margin-top:auto;"></div>
+    <div class="starter-template" id="prgs" style="float:left; margin-top:50px; margin-right:30px"></div>
+    <div class="starter-template" id="msg" style="float:left; margin-top:50px;"></div>
     <div class="starter-template" style="clear:both;"><br /><button style="width:150px" id="btnStart" type="button" onclick="btnStartClick()">Start Test</button><br /></div>
 
         
