--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         
 
     </div><!-- /.container -->
-	<div style="width:75%; position:relative">
+	<div class="container" style="margin-top:200px; width:75%; position:relative">
 		<canvas id="canvas"></canvas>
 	</div><!-- /.container -->
 
