--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <input type="checkbox" id="progress.verbose" checked="checked">Verbose Progress<br />
         </form>
     </div>
+	<div class="starter-template" style="float:left; margin-top:50px; margin-right:30px"><canvas id="canvas"></canvas></div>
     <div class="starter-template" id="prgs" style="float:left; margin-top:50px; margin-right:30px"></div>
     <div class="starter-template" id="msg" style="float:left; margin-top:50px;"></div>
     <div class="starter-template" style="clear:both;"><br /><button style="width:150px" id="btnStart" type="button" onclick="btnStartClick()">Start Test</button><br /></div>
@@ -87,9 +88,6 @@
         
 
     </div><!-- /.container -->
-	<div class="container" style="margin-top:200px; width:75%; position:relative">
-		<canvas id="canvas"></canvas>
-	</div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
