--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="../../about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../../line.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
