--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	<script src="../dist/Chart.bundle.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="dist/Chart.bundle.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
     canvas{
         -moz-user-select: none;
@@ -80,14 +81,17 @@
             <input type="checkbox" id="progress.verbose" checked="checked">Verbose Progress<br />
         </form>
     </div>
-	<div class="starter-template" style="float:left; margin-top:50px; margin-right:30px"><canvas id="canvas"></canvas></div>
-    <div class="starter-template" id="prgs" style="float:left; margin-top:50px; margin-right:30px"></div>
+	<div class="starter-template" style="float:left; margin-top:50px; margin-right:30px"></div>
+    
     <div class="starter-template" id="msg" style="float:left; margin-top:50px;"></div>
     <div class="starter-template" style="clear:both;"><br /><button style="width:150px" id="btnStart" type="button" onclick="btnStartClick()">Start Test</button><br /></div>
 
         
 
     </div><!-- /.container -->
+	<div class="container" style="position:relative">
+	<canvas id="canvas"></canvas>
+	</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
