--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         
 
     </div><!-- /.container -->
-	<div class="container" style="position:relative">
+	<div class="container" style="margin-top=500">
 	<canvas id="canvas"></canvas>
 	</div>
 
