--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-	<script type="text/javascript">
+	<script>
         SomApi.account = "SOM57479fc37701b";  // API Key here
         SomApi.domainName = "capstonespeedtest.herokuapp.com";
         SomApi.onTestCompleted = onTestCompleted;
