--- a/index.html
+++ b/index.html
@@ -331,22 +331,17 @@
                 "Percent Done: " + progress.percentDone + "% <br/>" +
                 "Current Speed: " + progress.currentSpeed + " Mbps <br/>" +
             "</h4>";
-			var newDataset = {
-                label: 'Dataset ' + config.data.datasets.length,
-                borderColor: randomColor(0.4),
-                backgroundColor: randomColor(0.5),
-                pointBorderColor: randomColor(0.7),
-                pointBackgroundColor: randomColor(0.5),
-                pointBorderWidth: 1,
-                data: [],
-            };
+			
+			if (config.data.datasets.length > 0) {
+                var month = MONTHS[config.data.labels.length % MONTHS.length];
+                config.data.labels.push(month);
 
-            for (var index = 0; index < config.data.labels.length; ++index) {
-                newDataset.data.push(progress.currentSpeed);
+                $.each(config.data.datasets, function(i, dataset) {
+                    dataset.data.push(randomScalingFactor());
+                });
+
+                window.myLine.update();
             }
-
-            config.data.datasets.push(newDataset);
-            window.myLine.update();
         }
     </script>
 	<script>
