--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
         </form>
     </div>
 	<div class="starter-template" style="float:left; margin-top:50px; margin-right:30px"></div>
-    
+    <div class="starter-template" id="prgs" style="float:left; margin-top:50px; margin-right:30px"></div>
     <div class="starter-template" id="msg" style="float:left; margin-top:50px;"></div>
+	
     <div class="starter-template" style="clear:both;"><br /><button style="width:150px" id="btnStart" type="button" onclick="btnStartClick()">Start Test</button><br /></div>
 
         
