--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 	<div class="starter-template" style="float:left; margin-top:50px; margin-right:30px"></div>
     <div class="starter-template" id="prgs" style="float:left; margin-top:50px; margin-right:30px"></div>
-    <div class="starter-template" id="msg" style="float:left; margin-top:50px;"></div>
+    <div class="starter-template" id="msg" style="float:left; margin-top:50px; margin-right:30px"></div>
 	
     <div class="starter-template" style="clear:both;"><br /><button style="width:150px" id="btnStart" type="button" onclick="btnStartClick()">Start Test</button><br /></div>
 
@@ -306,6 +306,16 @@
             msgDiv.innerHTML = "<h3>--------------- Test Result ---------------</h3><h4>" +
                 "Speed test in progress. Please wait...</h4>";
             SomApi.startTest();
+			if (config.data.datasets.length > 0) {
+                var month = MONTHS[config.data.labels.length % MONTHS.length];
+                config.data.labels.push(month);
+
+                $.each(config.data.datasets, function(i, dataset) {
+                    dataset.data.push(randomScalingFactor());
+                });
+
+                window.myLine.update();
+            }
 			
         }
 
