--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
         
         var randomScalingFactor = function() {
-            return Math.round(Math.random() * 100);
+            return Math.round(Math.random() * 10);
             //return 0;
         };
         var randomColorFactor = function() {
@@ -306,16 +306,7 @@
             msgDiv.innerHTML = "<h3>--------------- Test Result ---------------</h3><h4>" +
                 "Speed test in progress. Please wait...</h4>";
             SomApi.startTest();
-			if (config.data.datasets.length > 0) {
-                var month = MONTHS[config.data.labels.length % MONTHS.length];
-                config.data.labels.push(month);
-
-                $.each(config.data.datasets, function(i, dataset) {
-                    dataset.data.push(randomScalingFactor());
-                });
-
-                window.myLine.update();
-            }
+			
 			
         }
 
@@ -343,7 +334,16 @@
                 "Percent Done: " + progress.percentDone + "% <br/>" +
                 "Current Speed: " + progress.currentSpeed + " Mbps <br/>" +
             "</h4>";
-			
+			if (config.data.datasets.length > 0) {
+                var month = MONTHS[config.data.labels.length % MONTHS.length];
+                config.data.labels.push(month);
+
+                $.each(config.data.datasets, function(i, dataset) {
+                    dataset.data.push(progress.currentSpeed);
+                });
+
+                window.myLine.update();
+            }
 			
         }
     </script>
