--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 datasets: [{
                     label: "Download/Upload dataset",
                     data: [randomScalingFactor(), randomScalingFactor(), randomScalingFactor(), randomScalingFactor(), randomScalingFactor(), randomScalingFactor(), randomScalingFactor()],
-                    fill: false,
-                    borderDash: [5, 5],
+                    fill: true,
+                    
                 }]
             },
             options: {
