--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         var msgDiv = document.getElementById("msg");
         var prgsDiv = document.getElementById("prgs");
-		var fillcolor=rgba(0, 255, 0, 0.3)
+		var fillcolor='rgba(0, 255, 0, 0.3)'
 		
 		var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
         
@@ -136,7 +136,7 @@
                     label: "Download/Upload dataset",
                     data: [],
                     fill: true,
-					backgroundColor:fillcolor,
+					backgroundColor:'rgba(0, 255, 0, 0.3)',
                     
                 }]
             },
