--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         var config = {
             type: 'line',
             data: {
-                labels: ["January", "February", "March", "April", "May", "June", "July"],
+                labels: [],
                 datasets: [{
                     label: "Download/Upload dataset",
                     data: [],
