--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         var msgDiv = document.getElementById("msg");
         var prgsDiv = document.getElementById("prgs");
-		var fillcolor='rgba(0, 255, 0, 0.3)'
+		var fillcolor='rgba(0, 0, 255, 0.3)'
 		
 		var MONTHS = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
         
@@ -136,7 +136,7 @@
                     label: "Download/Upload dataset",
                     data: [],
                     fill: true,
-					backgroundColor:'rgba(0, 255, 0, 0.3)',
+					backgroundColor:fillcolor,
 					pointBorderWidth: 1,
                     
                 }]
@@ -191,7 +191,7 @@
                             labelString: 'Value'
                         },
                         ticks: {
-                            suggestedMin: -10,
+                            suggestedMin: 0,
                             suggestedMax: 10,
                         }
                     }]
@@ -335,7 +335,9 @@
 			if (count>5){
 				if (config.data.datasets.length > 0) {
 					var month = MONTHS[config.data.labels.length % MONTHS.length];
-					config.data.labels.push(month);
+					var d =new Date();
+					var time = d.getHours()+":"+d.getMinutes()+":"+d.getSeconds()
+					config.data.labels.push(time);
 
 					$.each(config.data.datasets, function(i, dataset) {
 						dataset.data.push(progress.currentSpeed);
