--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         -webkit-user-select: none;
         -ms-user-select: none;
     }
+	.myLogo { padding: 10px; }
     </style>
   </head>
 
@@ -56,6 +57,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+		  <a class="navbar-brand myLogo" href="#">
+			<img src="logo.jpg" />
+		  </a>
           <a class="navbar-brand" href="#">Capstone SpeedTest for Certis Cisco</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
