--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
         -webkit-user-select: none;
         -ms-user-select: none;
     }
-	.myLogo { padding: 10px; }
+	.myLogo { 
+		padding: 10px;
+		width: 50px;
+		height: 50px;
+
+	}
     </style>
   </head>
 
