--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span class="icon-bar"></span>
           </button>
 		  <a class="navbar-brand myLogo" href="#">
-			<img src="logo.jpg" />
+			<img src="logo.jpg"  width="50" height="50"  />
 		  </a>
           <a class="navbar-brand" href="#">Capstone SpeedTest for Certis Cisco</a>
         </div>
