--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
         -webkit-user-select: none;
         -ms-user-select: none;
     }
-	.myLogo { 
-		padding: 10px;
-		width: 50px;
-		height: 50px;
 
-	}
     </style>
   </head>
 
@@ -65,7 +60,7 @@
 		  <a class="navbar-brand myLogo" href="#">
 			<img src="logo.jpg"  width="50" height="50"  />
 		  </a>
-          <a class="navbar-brand" href="#">Capstone SpeedTest for Certis Cisco</a>
+          <a class="navbar-brand" style="margin-right:30px" href="#">Capstone SpeedTest for Certis Cisco</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
