--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-		  <a class="navbar-brand myLogo" href="#">
+		  <a class="navbar-brand myLogo" style="margin-right:0px" href="#">
 			<img src="logo.jpg"  width="50" height="50"  />
 		  </a>
           <a class="navbar-brand" style="margin-right:30px" href="#">Capstone SpeedTest for Certis Cisco</a>
