--- a/index.html
+++ b/index.html
@@ -281,15 +281,17 @@ $(function () {
                     xAxes: [{
                         display: true,
                         scaleLabel: {
+							display: true
                             show: true,
-                            labelString: 'Month'
+                            labelString: 'Timestamp'
                         }
                     }],
                     yAxes: [{
                         display: true,
-                        scaleLabel: {
+                        scaleLabel: {	
+							display: true
                             show: true,
-                            labelString: 'Value'
+                            labelString: 'Speed (Mpbs)'
                         },
                         ticks: {
                             suggestedMin: 0,
