--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ $(function () {
                     xAxes: [{
                         display: true,
                         scaleLabel: {
-							display: true
+							display: true,
                             show: true,
                             labelString: 'Timestamp'
                         }
@@ -289,7 +289,7 @@ $(function () {
                     yAxes: [{
                         display: true,
                         scaleLabel: {	
-							display: true
+							display: true,
                             show: true,
                             labelString: 'Speed (Mpbs)'
                         },
