--- a/index.html
+++ b/index.html
@@ -408,10 +408,11 @@ $(function () {
             msgDiv.innerHTML = "<h3>--------------- Test Result ---------------</h3><h4>" +
                 "Speed test in progress. Please wait...</h4>";
             SomApi.startTest();
+			/*
 			linechart.destroy();
 			var ctx = document.getElementById("canvas").getContext("2d");
-            linechart = new Chart(ctx, config);
-			window.line = linechart;
+            window.line = new Chart(ctx, config);
+			*/
 			
         }
 
