--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@ $(function () {
 
         window.onload = function() {
             var ctx = document.getElementById("canvas").getContext("2d");
-            window.line = new Chart(ctx, config);
-			
+            linechart = new Chart(ctx, config);
+			window.myline = linechart;
         };
 
         $('#randomizeData').click(function() {
@@ -408,11 +408,11 @@ $(function () {
             msgDiv.innerHTML = "<h3>--------------- Test Result ---------------</h3><h4>" +
                 "Speed test in progress. Please wait...</h4>";
             SomApi.startTest();
-			/*
+			
 			linechart.destroy();
 			var ctx = document.getElementById("canvas").getContext("2d");
-            window.line = new Chart(ctx, config);
-			*/
+            window.myline = new Chart(ctx, config);
+			
 			
         }
 
