--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ $(function () {
 	<script src="https://code.highcharts.com/modules/exporting.js"></script>
 	<!-- ########## -->
 	<script>
-        SomApi.account = "SOM57479fc37701b";  // API Key here
-        SomApi.domainName = "capstonespeedtest.herokuapp.com";
+        SomApi.account = "SOM5768d36e43cd5";  // API Key here
+        SomApi.domainName = "skyeyespeedtest.herokuapp.com";
         SomApi.onTestCompleted = onTestCompleted;
         SomApi.onError = onError;
         SomApi.onProgress = onProgress;
