--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ $(function () {
 
         window.onload = function() {
             var ctx = document.getElementById("canvas").getContext("2d");
-            window.myline  = new Chart(ctx, config);
+            window.myLine  = new Chart(ctx, config);
 			
         };
 
