--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@ $(function () {
         
 
     </div><!-- /.container -->
-	<div style="margin-top=500">
-	<div style="width:75%;">
+	<div style="margin-top=500; margin-right:30px">
+	<div style="width:75%; margin-right:30px">
         <canvas id="canvas"></canvas>
     </div>
-	<div id="canvas-holder" style="width:50%">
+	<div id="canvas-holder" style="float:left; width:50% margin-right:30px">
         <canvas id="chart-area" width="300" height="300" />
     </div>
 	
