--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	<script src="dist/Chart.bundle.js"></script>
+	
 	<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
@@ -142,7 +143,7 @@ $(function () {
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="../../about.html">About</a></li>
+            <li><a href="../../piecustom.html">About</a></li>
             <li><a href="../../line.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
