--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ $(function () {
             window.myLine  = new Chart(ctx, config);
 			
 			var ctxpie = document.getElementById("chart-area").getContext("2d");
-			window.myPie = new Chart(ctxpie, configpie);
+			window.myPie = new Chart(ctxpie, configPie);
 			
         };
 
