--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ $(function () {
         
 
         window.onload = function() {
-            var ctx = document.getElementById("canvas").getContext("2d");
-            window.myLine  = new Chart(ctx, config);
+            //var ctx = document.getElementById("canvas").getContext("2d");
+            //window.myLine  = new Chart(ctx, config);
 			
 			var ctxpie = document.getElementById("chart-area").getContext("2d");
 			window.myPie = new Chart(ctxpie, configPie);
