--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@ $(function () {
     </div><!-- /.container -->
 	<div class="container" style="margin-top=500; margin-right:30px">
 	
-	<div style="margin-right:10px; float:left; width:75%;">
+	<div style="margin-right:10px; float:left;">
         <canvas id="canvas"></canvas>
     </div>
 	
-	<div style="width:75%; margin-right:10px; float:left;">
+	<div style="margin-right:10px; float:left;">
         <canvas id="chart-area"></canvas>
     </div>
 	<!--
