--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ $(function () {
     </div><!-- /.container -->
 	<div class="container" style="margin-top=500; margin-right:30px">
 	
-	<div style="margin-right:10px; float:left;">
+	<div style="width:50%; margin-right:10px; float:left;">
         <canvas id="canvas"></canvas>
     </div>
 	
