--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ $(function () {
 				
 				}],
 				labels: [
-					"Red",
+					"Percent done",
 					
 				]
 			},
@@ -522,6 +522,11 @@ $(function () {
 			
 			window.myLine.update();
 			count+=1
+			
+			config.data.datasets[0].data[0]+=progress.percentDone
+			config.data.datasets[0].data[1]-=progress.percentDone
+  
+			window.myPie.update();
 			
         }
     </script>
