--- a/index.html
+++ b/index.html
@@ -523,8 +523,8 @@ $(function () {
 			window.myLine.update();
 			count+=1
 			
-			config.data.datasets[0].data[0]+=progress.percentDone
-			config.data.datasets[0].data[1]-=progress.percentDone
+			configPie.data.datasets[0].data[0]+=progress.percentDone
+			configPie.data.datasets[0].data[1]-=progress.percentDone
   
 			window.myPie.update();
 			
