--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ $(function () {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-		  <a class="navbar-brand myLogo" style="margin-right:10px" href="#">
+		  <a class="navbar-brand myLogo" style="float:left; margin-right:10px" href="#">
 			<img src="logo.jpg"  width="50" height="50"  />
 		  </a>
           <a class="navbar-brand" style="margin-right:30px" href="#">Capstone SpeedTest for Certis Cisco</a>
@@ -179,7 +179,11 @@ $(function () {
     </div>
 	
 	<div style="margin-right:10px; float:left;">
-        <canvas id="chart-area"></canvas>
+	<div id="piechart">
+        <canvas id="chart-area" style="position:relative; "></canvas>
+	</div>
+		<div class="starter-template" id="text" style="float:left; text-align: center; margin-top:50px; margin-right:10px"></div>
+		
     </div>
 	<!--
 	<div id="canvas-holder" style="float:left; width:50% margin-right:30px">
@@ -216,6 +220,7 @@ $(function () {
 		var linechart;
         var msgDiv = document.getElementById("msg");
         var prgsDiv = document.getElementById("prgs");
+		var textDiv = document.getElementById("text");
 		var fillcolor='rgba(0, 0, 255, 0.3)'
 		var fillcoloryellow='rgba(255, 255, 0, 0.3)'
 		
@@ -346,6 +351,7 @@ $(function () {
 			window.myPie = new Chart(ctxpie, configPie);
 			var ctx = document.getElementById("canvas").getContext("2d");
             window.myLine  = new Chart(ctx, config);
+			textDiv.innerHTML = "Pass: 0<br/>Percent Done: 0%";
         };
 
         $('#randomizeData').click(function() {
@@ -479,6 +485,8 @@ $(function () {
                 "Percent Done: " + progress.percentDone + "% <br/>" +
                 "Current Speed: " + progress.currentSpeed + " Mbps <br/>" +
             "</h4>";
+			
+			textDiv.innerHTML = "Pass: "+progress.pass+"<br/>Percent Done: "+progress.percentDone+"%";
 			<!-- -->
 			/*
 			if (count>5){
