--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ $(function () {
             <span class="icon-bar"></span>
           </button>
 		  <a class="navbar-brand myLogo" style="float:left; margin-right:10px" href="#">
-			<img src="logo.jpg"  width="50" height="50"  />
+			<img src="logo.jpg"  width="50" height="50">
 		  </a>
           <a class="navbar-brand" style="margin-right:30px" href="#">Capstone SpeedTest for Certis Cisco</a>
         </div>
@@ -182,7 +182,7 @@ $(function () {
 	<div id="piechart">
         <canvas id="chart-area" style="position:relative; "></canvas>
 	</div>
-		<div class="starter-template" id="text" style="float:left; text-align: center; margin-top:50px; margin-right:10px"></div>
+		<div class="starter-template" id="text" style="text-align: center; margin-top:50px;"></div>
 		
     </div>
 	<!--
