--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         -webkit-user-select: none;
         -ms-user-select: none;
     }
+	
+	#myLogo img
+	{
+	  max-width:100%; 
+	  max-height:100%;
+	  margin:auto;
+	  display:block;
+	}
 
     </style>
 	
@@ -135,7 +143,7 @@ $(function () {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-		  <a class="navbar-brand myLogo" style="float:left; margin-right:10px" href="#">
+		  <a class="navbar-brand myLogo" id="myLogo" style="float:left; margin-right:10px" href="#">
 			<img src="logo.jpg"  width="50" height="50">
 		  </a>
           <a class="navbar-brand" style="margin-right:30px" href="#">Capstone SpeedTest for Certis Cisco</a>
