--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	  max-width:100%; 
 	  max-height:100%;
 	  margin:auto;
-	  display:block;
+	  
 	}
 
     </style>
@@ -143,8 +143,8 @@ $(function () {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-		  <a class="navbar-brand myLogo" id="myLogo" style="float:left; margin-right:10px" href="#">
-			<img src="logo.jpg"  width="50" height="50">
+		  <a class="navbar-brand myLogo" id="myLogo" style=" margin-right:10px" href="#">
+			<img src="logo.jpg" >
 		  </a>
           <a class="navbar-brand" style="margin-right:30px" href="#">Capstone SpeedTest for Certis Cisco</a>
         </div>
