--- a/index.html
+++ b/index.html
@@ -479,10 +479,11 @@ $(function () {
                 "IP: " + testResult.ip_address + "<br/>" +
                 "Hostname: " + testResult.hostname + "<br/>" +
             "</h4>";
-            var JSONobject = {download: testResult.download,upload: testResult.upload, latency: testResult.latency, jitter: testResult.jitter, testServer: testResult.testServer, ip:testResult.ip_address, hostname:testResult.hostname};
-            var jsonData = JSON.stringify( JSONobject );
+            
+            // var JSONobject = {download: testResult.download,upload: testResult.upload, latency: testResult.latency, jitter: testResult.jitter, testServer: testResult.testServer, ip:testResult.ip_address, hostname:testResult.hostname};
+            // var jsonData = JSON.stringify( JSONobject );
 
-            $.post("resultSubmission.php",{json_string:jsonData});
+            // $.post("resultSubmission.php",{json_string:jsonData});
         }
 
         function onError(error) {
