Domain name updated.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ $(function () {
 	<!-- ########## -->
 	<script>
         SomApi.account = "SOM5768d36e43cd5";  // API Key here
-        SomApi.domainName = "capstonespeedtest.herokuapp.com";
+        SomApi.domainName = "skyeyespeedtest.herokuapp.com";
         SomApi.onTestCompleted = onTestCompleted;
         SomApi.onError = onError;
         SomApi.onProgress = onProgress;
@@ -479,8 +479,7 @@ $(function () {
                 "IP: " + testResult.ip_address + "<br/>" +
                 "Hostname: " + testResult.hostname + "<br/>" +
             "</h4>";
-            
-            // 
+
 
 
 
