--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ $(function () {
             var JSONobject = {download: testResult.download,upload: testResult.upload, latency: testResult.latency, jitter: testResult.jitter, testServer: testResult.testServer, ip:testResult.ip_address, hostname:testResult.hostname};
             var jsonData = JSON.stringify( JSONobject );
 
-            $.post("resultSubmission.pphp",{json_string:jsonData});
+            $.post("resultSubmission.php",{json_string:jsonData});
 
 
 
