--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ $(function () {
 	<script src="https://code.highcharts.com/modules/exporting.js"></script>
 	<!-- ########## -->
 	<script>
-        SomApi.account = "SOM5768d36e43cd5";  // API Key here
+        SomApi.account = "SOM578f3dac7a916";  // API Key here
         SomApi.domainName = "skyeyespeedtest.herokuapp.com";
         SomApi.onTestCompleted = onTestCompleted;
         SomApi.onError = onError;
