--- a/index.html
+++ b/index.html
@@ -541,8 +541,8 @@ $(function () {
 				
 				//JSON.stringify(data),
 				processData: false,
-				contentType: "application/json; charset=utf-8",
-				dataType: "json",
+				//contentType: "application/json; charset=utf-8",
+				//dataType: "json",
 				async: true,
 			    //data: "download="+testResult.download+"&upload="+testResult.upload,
 				/* dataType:'json', */
