--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ $(function () {
 			*/
 			$.ajax({
 				url:'/addresult.php',
-				type:'GET',
+				type:'POST',
 				/*
 				data: {download: JSON.stringify(testResult.download),
 					   upload : JSON.stringify(testResult.upload)},
