--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ $(function () {
 				}
 			});
 			*/
-			$.post("//www.ec2-52-77-247-210.ap-southeast-1.compute.amazonaws.com/resultSubmission.php",jsonData,function(result)//we got the response
+			$.post("ec2-52-77-247-210.ap-southeast-1.compute.amazonaws.com/resultSubmission.php",jsonData,function(result)//we got the response
 			   {
 				alert('Successfully called');
 			   });
